Fix web3modal z-index problem

--- a/website/styles/globals.css
+++ b/website/styles/globals.css
@@ -55,3 +55,7 @@ body {
 
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1B1B1B", endColorstr="#010101", GradientType=1 );
 }
+
+.web3modal-modal-lightbox {
+  z-index: 10 !important;
+}
